# Gallows-Game

./: CHANGELOG.md  Gallows-Game.cabal  LICENSE  README.md
app/: Main.hs
src/: GallowsGame.hs
