cabal-version:       2.0
name:                Gallows-Game
version:             0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/stekkko/Gallows-Game
bug-reports:         https://github.com/stekkko/Gallows-Game/issues
license:             MIT
license-file:        LICENSE
author:              Daniil Smirnov
maintainer:          wertufan@mail.ru
copyright:           2019 Daniil Smirnov
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.4

source-repository head
  type:                git
  location:            https://github.com/stekkko/Gallows-Game.git

library
  hs-source-dirs:      src
  exposed-modules:     GallowsGame
                       

  build-depends:       base ^>= 4.12.0.0
                     

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

executable Gallows-Game
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base ^>= 4.12.0.0
                     , Gallows-Game
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
